--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,6 +9,11 @@
   <img src=<%= @movie.poster %>
 </p>
 
+
+<p> <strong> Rating: </strong>
+<%= @movie.average_rating %>
+</p>
+
 <p>
   <strong>Description:</strong>
   <%= @movie.description %>
