--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,6 +2,12 @@
   <div class="background"></div>
   <div class="app-name">Hello</div>
   <div class="sign-in-button">
+    <% if current_user %>
+        <%= link_to 'Wyloguj się', destroy_user_session_path, method: :delete, class: 'button zaloguj' %>
+
+    <% else %>
+    <%= link_to 'Zaloguj się', new_user_session_path, class: 'button zaloguj' %>
+    <% end %>
     <%= link_to 'Dodaj film', new_movie_path, class: 'button landing' %>
     <%= link_to 'Lista filmów', movies_path, class: 'button list' %>
   </div>
